Closed
Bug 462364
Opened 17 years ago
Closed 17 years ago
Deleting a List from Address Book does not get reflected immediately
Categories
(MailNews Core :: Address Book, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.0b2
People
(Reporter: dypark, Assigned: standard8)
Details
(Keywords: regression)
Attachments
(1 file)
|
10.41 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.3) Gecko/2008092414 Firefox/3.0.3
Build Identifier: 3.0b1 pre
When you delete a list, it doesn't disappear from the address book immediately so it looks like delete has failed. If you do a search for the list, the list no longer appears.
Reproducible: Always
Steps to Reproduce:
1.create a list
2.search for the list
3.delete the list
| Assignee | ||
Updated•17 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking-thunderbird3+
Keywords: regression
Target Milestone: --- → Thunderbird 3.0b1
| Assignee | ||
Updated•17 years ago
|
Whiteboard: [Standard8 needs to look at various address book regressions that seemed to have crept in, and this is one of them]
| Assignee | ||
Updated•17 years ago
|
Product: Thunderbird → MailNews Core
QA Contact: address-book → addressbook
Version: unspecified → Trunk
| Assignee | ||
Updated•17 years ago
|
Whiteboard: [Standard8 needs to look at various address book regressions that seemed to have crept in, and this is one of them]
| Assignee | ||
Comment 1•17 years ago
|
||
This fixes the bug, the problem was we were sending an item removed notification for the directory representation, but not the card...
Although we're probably splitting these soon, I'd still like to fix this for b1 and get the unit test in.
The unit test is testing more than just the notification here, which means we can hopefully ensure we still get the right updates if/when we change things.
Assignee: nobody → bugzilla
Status: NEW → ASSIGNED
Attachment #348549 -
Flags: superreview?(bienvenu)
Attachment #348549 -
Flags: review?(bienvenu)
Updated•17 years ago
|
Attachment #348549 -
Flags: superreview?(bienvenu)
Attachment #348549 -
Flags: superreview+
Attachment #348549 -
Flags: review?(bienvenu)
Attachment #348549 -
Flags: review+
Comment 2•17 years ago
|
||
Comment on attachment 348549 [details] [diff] [review]
The fix and test
this looks good - I haven't tested it, so I'm relying on the test case being valid.
Did you intend the compose dir changes to be in this diff?
| Assignee | ||
Comment 3•17 years ago
|
||
The test case does enough to show the bug is fixed (i.e. we're sending out the notification), but doesn't test nsAbView as that's a bit harder.
The compose changes were intentional and were just included in this patch due to them being small removals of obsolete includes (I checked this was ok with David until after b1).
Checked in: http://hg.mozilla.org/comm-central/rev/f550ece98221
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•