Bug 462364 Deleting a List from Address Book does not get reflected immediately. r/sr=bienvenu